gitops/bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    # Force SSL redirect on the Application Gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # Inform AGIC that the ArgoCD server expects HTTPS traffic backend-side
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  rules:
    - host: argocd.training.sneakertail.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
